# idep

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  PRODUCT.md  README.md  SECURITY.md  SUSTAINABILITY.md  TODO.md  TODO.md.patches  config.example.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml
example/: ollama-smoketest.md
idep-ai/: Cargo.toml
idep-ai/src/: lib.rs
idep-ai/src/backends/: anthropic.rs  huggingface.rs  mock.rs  mod.rs  ollama.rs  openai_compat.rs
idep-ai/src/chat/: integration_test.rs  mod.rs  native_format_test.rs
idep-ai/src/completion/: mod.rs
idep-ai/src/context/: mod.rs
idep-ai/src/indexer/: ast.rs  mod.rs
idep-ai/tests/: anthropic_backend.rs  huggingface_backend.rs  ollama_backend.rs  openai_compat_backend.rs
idep-core/: Cargo.toml
idep-core/src/: buffer.rs  config.rs  lib.rs  workspace.rs
idep-index/: Cargo.toml
idep-index/src/: chunk_store.rs  embedder.rs  indexer.rs  lib.rs  pipeline.rs  vector_store.rs
idep-lsp/: Cargo.toml
idep-lsp/src/: client.rs  completion.rs  diagnostics.rs  document.rs  jsonrpc_transport.rs  lib.rs  path.rs
idep-lsp/tests/: document_sync.rs  rust_analyzer_integration.rs  wsl_path_integration.rs
idep-plugin/: Cargo.toml
idep-plugin/src/: lib.rs
idep-tui/: Cargo.toml
idep-tui/src/: highlight.rs  main.rs  markdown-highlight.scm  python-highlight.scm  rust-highlight.scm  toml-highlight.scm  typescript-highlight.scm
idep-tui/tests/: completion_v0_1_3.rs  diagnostics_integration.rs
