[workspace]
members = [
    "idep-core",
    "idep-ai",
    "idep-lsp",
    "idep-plugin",
    "idep-index",
]
resolver = "2"

[workspace.package]
version      = "0.0.6"
edition      = "2021"
authors      = ["Kresna Sucandra <hello@idep.dev>"]
license      = "Apache-2.0"
repository   = "https://github.com/idep-editor/idep"
homepage     = "https://idep.dev"
rust-version = "1.77"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1",  features = ["full"] }

# HTTP / streaming
reqwest      = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"

# Serialization
serde        = { version = "1",  features = ["derive"] }
serde_json   = "1"

# Error handling
anyhow       = "1"
thiserror    = "1"

# Logging
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LSP protocol
lsp-types    = "0.95"
jsonrpc-core = "18"

# Tree-sitter
tree-sitter  = "0.22"

# Config
toml         = "0.8"
dirs         = "5"

# Embeddings
fastembed    = "5"

# Internal crates
idep-core    = { path = "idep-core" }
idep-ai      = { path = "idep-ai" }
idep-lsp     = { path = "idep-lsp" }
idep-plugin  = { path = "idep-plugin" }
idep-index   = { path = "idep-index" }

# WASM plugin runtime
wasmtime     = { version = "21" }
