[package]
name        = "idep-core"
description = "Editor core for Idep — buffer management, LSP orchestration, plugin host"

version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[dependencies]
tokio.workspace     = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true
serde.workspace     = true
serde_json.workspace = true
lsp-types.workspace = true
toml.workspace      = true
dirs.workspace      = true
notify = "6"
notify-debouncer-mini = "0.4"

# Text rope buffer
ropey = "1.6"

[dev-dependencies]
tempfile = "3"
