[package]
name        = "idep-index"
description = "Semantic indexing for Idep — codebase search and embeddings"
keywords    = ["ide", "index", "search", "embeddings"]
categories  = ["development-tools"]

version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[dependencies]
tokio.workspace       = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
walkdir               = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
