[package]
name        = "idep-index"
description = "Semantic indexing for Idep — codebase search and embeddings"
keywords    = ["ide", "index", "search", "embeddings"]
categories  = ["development-tools"]

version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[dependencies]
tokio.workspace       = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
walkdir               = "2"
ignore                = "0.4"
dirs.workspace        = true
fastembed.workspace  = true
idep-ai.workspace     = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
lazy_static = "1"
tempfile = "3"
