[package]
name        = "idep-tui"
description = "Terminal UI for Idep editor"

version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[[bin]]
name = "idep"
path = "src/main.rs"

[dependencies]
idep-core = { workspace = true }

anyhow.workspace    = true
tokio.workspace     = true
tracing.workspace   = true

ratatui.workspace = true
crossterm.workspace = true
signal-hook = "0.3"

# Syntax highlighting
tree-sitter.workspace = true
tree-sitter-rust       = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python     = "0.20"
tree-sitter-toml       = "0.20"
tree-sitter-md         = "0.1"
