[package]
name        = "idep-tui"
description = "Terminal UI for Idep editor"

version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[[bin]]
name = "idep"
path = "src/main.rs"

[dependencies]
idep-core = { workspace = true }
idep-lsp = { workspace = true }
idep-ai = { workspace = true }
lsp-types = { workspace = true }

anyhow.workspace    = true
tokio.workspace     = true
tracing.workspace   = true

ratatui.workspace = true
crossterm.workspace = true
signal-hook = "0.3"

# Syntax highlighting
tree-sitter.workspace = true
tree-sitter-rust       = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python     = "0.20"
tree-sitter-toml       = "0.20"
tree-sitter-md         = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serde_json = "1"
lsp-server = "0.7"
